--- a/index.html
+++ b/index.html
@@ -13,7 +13,7 @@
         <div class="content">
             <h1>Type a word in the box</h1>
             <form id="word-form">
-                <input type="text" id="word-input" />
+                <input type="text" id="word-input" placeholder="Enter any word"/>
                 <input type="submit" value="Click to get length of the words" class="btn" id="calculate" />
             </form>
             <div class="display">
